--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
 <resources>
     <string name="app_name">ShoeStore</string>
+
+    <!-- Login -->
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="new_login">new Login</string>
     <string name="login_with_existing_account">login with existing account</string>
+
+    <!-- Welcome -->
+    <string name="welcome_shoe_store_title">Welcome to Shoe Store</string>
+    <string name="welcome_shoe_store_description">Here you can buy your favorite shoes</string>
+    <string name="next">next</string>
 </resources>
+
